[tool.poetry]
name = "wgups-routing-program"
version = "0.1.0"
description = ""
authors = ["Dustin Luttrell <52095131+USDustin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
