[tool.poetry]
name = "wgups_routing_program"
version = "0.1.0"
description = ""
authors = ["Dustin Luttrell <52095131+USDustin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
